tests/compile/compile_fail/point_plus_point.stderr
error[E0308]: mismatched types
 --> tests/compile/compile_fail/point_plus_point.rs:7:21
  |
7 |     let _bad = p1 + p2; // should fail
  |                     ^^ expected `Direction3<f32>`, found `Point3<f32>`
  |
  = note: expected struct `Direction3<f32>`
             found struct `echo_math::Point3<f32>`
